--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.5.2",
-    "rxjs": "~6.6.0",
+    "ngx-ionic-image-viewer": "^0.7.4",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
