--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.6",
     "http-server": "^14.0.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
